--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ font-family: 'Yeseva One', cursive;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  min-height: 796px;
+  height: 100vh;
 /* background-color: #101820;*/
 /* background-color: #011627;*/
  background-color: #051923;
@@ -108,6 +108,6 @@ Button{
 #whoWon{
   color: #FEE715;
   padding: 5px;
-  font-size: 24px;
+  font-size: 28px;
   margin-bottom: 30px;
 }
