--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ font-family: 'Yeseva One', cursive;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 100vh;
+  height: 796px;
 /* background-color: #101820;*/
 /* background-color: #011627;*/
  background-color: #051923;
@@ -28,6 +28,92 @@ font-family: 'Yeseva One', cursive;
  background-size: cover;
  background-repeat: no-repeat;
 }
+
+.heading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.heading p{
+  margin: 3px;
+  font-size: 16px;
+  text-align: justify;
+}
+.myHeading{
+  font-size: 32px;
+  font-weight: 700;
+  color: #FEE715;
+}
+p{
+  font-size: 18px;
+  color: white;
+}
+h1{
+margin-bottom: 10px;
+  color: white;
+  font-size: 28px;
+}
+.my-buttons{
+  display: flex;
+  width: 60%;
+  justify-content: space-evenly ;
+  align-items: center;
+}
+.score{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+#result{
+/*  background-color: darkgreen;*/
+}
+#myScore{
+ /* background-color: orange;*/
+}
+Button{
+  width: 30%;
+  font-size: 18px;
+  background-color: #FEE715;
+  font-weight: 700;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+  margin: 10px 0;
+  font-size: 22px;
+  color: #101820;
+}
+#result{
+  
+}
+#computerStats, #myStats {
+  font-size: 48px;
+}
+.statistics{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.myClicks{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ /* background-color: #FEE715;
+  width: 50%;
+  height: auto;*/
+}
+
+#whoWon{
+  color: #FEE715;
+  padding: 5px;
+  font-size: 20px;
+  margin-bottom: 30px;
+  }
+@media(max-width: 768px){
+
 .heading{
   display: flex;
   flex-direction: column;
@@ -108,6 +194,7 @@ Button{
 #whoWon{
   color: #FEE715;
   padding: 5px;
-  font-size: 28px;
+  font-size: 20px;
   margin-bottom: 30px;
+  }
 }
