Adjust height for screens above 768px

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ font-family: 'Yeseva One', cursive;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 796px;
+  height: 100vh;
 /* background-color: #101820;*/
 /* background-color: #011627;*/
  background-color: #051923;
