--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ font-family: 'Yeseva One', cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   height: 100vh;
 /* background-color: #101820;*/
 /* background-color: #011627;*/
@@ -111,7 +111,7 @@ Button{
 @media(max-width: 768px){
 
 .container{
-  height: 798px;
+  height: 100vh;
 }
 
 .heading{
@@ -166,7 +166,7 @@ Button{
 }
 #reset{
   width: 30%;
-  margin-bottom: 30px;
+  margin-bottom: 120px;
 }
 
 #computerStats, #myStats {
@@ -192,6 +192,6 @@ Button{
   color: #FEE715;
   padding: 5px;
   font-size: 20px;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
   }
 }
