--- a/style.css
+++ b/style.css
@@ -94,16 +94,23 @@ margin-bottom: 10px;
 Button{
   width: 30%;
   font-size: 18px;
-  background-color: #FEE715;
+  /* background-color: #FEE715; */
+  border: 1px solid #FEE715;
+  background-color: transparent;
   font-weight: 700;
   padding: 15px;
-  border: none;
+  /* border: none; */
   border-radius: 5px;
   margin: 10px 0;
   font-size: 22px;
-  color: #101820;
+  /* color: #101820; */
+  color: #FEE715;
 }
-#
+button:hover{
+  background-color: #FEE715;
+  color: #101820;
+  border: none;
+}
 
 #computerStats, #myStats {
   font-size: 48px;
